--- a/public/404.html
+++ b/public/404.html
@@ -56,12 +56,19 @@
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+  <div class="home-container d-flex justify-content-center flex-wrap">
+    <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="borrow-container d-flex justify-content-center flex-column align-items-center flex-wrap">
+      <h1 class="gradient1"> 404</h1>
+      <br>
+      <h3 class="gradient1"> Oh no! Your page has not been found!</h3>
+      <br>
+      <h3 class="gradient1"> Don't worry... your item is not lost</h3>
+      <br>
+      <br>
+      <h3 class="gradient1"> link_to "Try returning home", root_path, class:"lend-btns"</h3>
+    </div>
   </div>
 </body>
 </html>
