--- a/public/500.html
+++ b/public/500.html
@@ -56,11 +56,18 @@
 
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
+  <div class="home-container d-flex justify-content-center flex-wrap">
+    <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <div class="borrow-container d-flex justify-content-center flex-column align-items-center flex-wrap">
+      <h1 class="gradient1"> 500</h1>
+      <br>
+      <h3 class="gradient1"> Oh no! There has been a sever error!</h3>
+      <h3 class="gradient1"> Don't worry... your item is not lost</h3>
+      <br>
+      <br>
+      <h3 class="gradient1">"Try returning home"</h3>
+    </div>
   </div>
 </body>
 </html>
