--- a/public/500.html
+++ b/public/500.html
@@ -1,73 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Server Error (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  .error {
+  text-align: center;
+  color: #fff;
+  font-size: 12em;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow:
+    0 1px 0 #ccc,
+    0 2px 0 #c9c9c9,
+    0 3px 0 #bbb,
+    0 4px 0 #b9b9b9,
+    0 5px 0 #aaa,
+    0 6px 1px rgba(0,0,0,.1),
+    0 0 5px rgba(0,0,0,.1),
+    0 1px 3px rgba(0,0,0,.3),
+    0 3px 5px rgba(0,0,0,.2),
+    0 5px 10px rgba(0,0,0,.25),
+    0 10px 10px rgba(0,0,0,.2),
+    0 20px 20px rgba(0,0,0,.15);
+}
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+.return-btn {
+  text-align: center;
+  border: 1px rgba(0, 0, 0, 0.5) solid;
+  border-radius: 61px;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  padding: 20px 30px;
+  text-transform: uppercase;
+}
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+.return-btn:hover {
+  background-color: lightgrey;
+}
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+.centre {
+  text-align: center;
+}
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+body {
+  background-color: #52B69A;
+}
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
-  <div class="home-container d-flex justify-content-center flex-wrap">
-    <div class="lend-container d-flex justify-content-center flex-column align-items-center flex-wrap">
-    </div>
-    <div class="borrow-container d-flex justify-content-center flex-column align-items-center flex-wrap">
-      <h1 class="gradient1"> 500</h1>
-      <br>
-      <h3 class="gradient1"> Oh no! There has been a sever error!</h3>
-      <h3 class="gradient1"> Don't worry... your item is not lost</h3>
-      <br>
-      <br>
-      <h3 class="gradient1">"Try returning home"</h3>
-    </div>
+  <div class="error">500</div>
+  <br>
+  <div class="centre">
+    <a class="return-btn"
+       href="http://www.goodterms.fun"
+    > Return Home</a>
   </div>
 </body>
 </html>
