--- a/public/404.html
+++ b/public/404.html
@@ -41,6 +41,10 @@
 
 .centre {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
 }
 
 body {
@@ -54,6 +58,7 @@ body {
   <div class="error">404</div>
   <br>
   <div class="centre">
+    <iframe src="https://giphy.com/embed/jXp6wAeHU3Ds3UoNMG" width="398" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
     <a class="return-btn"
        href="http://www.goodterms.fun"
     > Return Home</a>
